<resources>
    <string name="app_name">Layout-telas</string>
    <string name="header_title_main">Poupança</string>
    <string name="header_title_quiz_transito">Quiz de trânsito</string>
    <string name="header_title_pizzaria">Pizza</string>
    <string name="header_piggybank_description">Cofrinho minimalista branco com um cifrão no meio</string>
    <string name="header_car_description">Carrinho branco minimalista virado para esquerda</string>
    <string name="header_pizza_description">Pizza minimalista de cor branca apontada para o canto inferior direito</string>
    <string name="valor_inicial">Valor Inicial:</string>
    <string name="hint_valor_inicial">Valor em R$ Ex: 1700.00</string>
    <string name="aplicacao_mensal">Aplicação mensal:</string>
    <string name="hint_aplicacao_mensal">Ex: 100.00</string>
    <string name="tempo_da_aplicacao">Tempo da aplicação:</string>
    <string name="hint_tempo_da_aplicacao">Em meses</string>
    <string name="taxa">Taxa</string>
    <string name="hint_taxa">Ex: 0.02</string>
    <string name="btn_calcular">Calcular</string>
    <string name="btn_proximo_layout">Próximo Layout</string>
    <string name="description_placa">Placa de transito atual</string>
    <string name="proxima_pergunta">Próxima pergunta</string>
    <string name="btn_voltar">Voltar</string>
    <string name="pergunta">O que significa essa placa?</string>
    <string name="questao_1">Questão 1</string>
    <string name="questao_2">Questão 2</string>
    <string name="questao_3">Questão 3</string>
    <string name="questao_4">Questão 4</string>
    <string name="questao_5">Questão 5</string>
    <string name="responder">Responder</string>
    <string name="banner_pizzaria_description">Banner de pizzaria escrito Pizzaria Luig: Pizza artesanal e sabor tradicional</string>
    <string name="escolha_seu_sabor">Escolha seu sabor e quantidade:</string>
    <string name="pizza_bacon_description">Pizza de bacon vista de cima</string>
    <string name="pizza_bacon_price">Pizza de Bacon R$33,99</string>
    <string name="pizza_peperoni_price">Pizza de Peperoni R$32,99</string>
    <string name="pizza_mucarela_price">Pizza de Muçarela R$31,99</string>
    <string name="pizza_calabresa_price">Pizza de Calabresa R$29,99</string>
    <string name="pizza_peperoni_description">Pizza de peperoni vista de cima</string>
    <string name="pizza_mucarela_description">Pizza de muçarela vista de cima</string>
    <string name="pizza_calabresa_description">Pizza de calabresa vista de cima</string>
    <string name="quantidade">Quantidade</string>
    <string name="btn_fazer_pedido">Fazer pedido</string>
    <string name="header_tile_calcular_comanda">Calcular Comanda</string>
    <string name="banner_churrascaria_description">Banner de churrascaria escrito Churrascaria Luig e barbosa</string>
    <string name="calcular_comanda">Calcular comanda:</string>
    <string name="consumo_total">Consumo total R$:</string>
    <string name="couvert_artistico">Couvert artístico R$:</string>
    <string name="dividir_conta_por">Dividir conta por:</string>
    <string name="btn_calcular_conta_final">Calcular Conta Final</string>
    <string name="taxa_de_servico">Taxa de serviço(10%) R$:</string>
    <string name="conta_total">Conta total R$:</string>
    <string name="valor_por_pessoa">Valor por pessoa R$:</string>
</resources>